--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,17 @@ defaults:
       type: "pages"
     values:
       layout: "default"
+# Collections
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name/
+
+# Defaults for projects
+defaults:
+  - scope:
+      path: "_projects"
+      type: "projects"
+    values:
+      layout: "project"
 theme: jekyll-theme-minimal
